--- a/login.html
+++ b/login.html
@@ -138,7 +138,7 @@
             formData.append('password', password);
 
             if (username === 'Admin' && password === 'Admin123') {
-        window.loxation.href="admin.html";
+        window.location.href="admin.html";
     } else {
                  document.getElementById('message').textContent = 'Invalid username or password';
     }
